--- a/wirkungsgrad.tex
+++ b/wirkungsgrad.tex
@@ -318,8 +318,8 @@ wird bei den verwendeten Kabeln auf die Farbe geachtet.
 		3 \dots regelbarer Widerstand\\
 		4 \dots Voltmeter\\
 		5 \dots Amperemeter\\
-		6 \dots entsprechende Verkabelung für Serienschaltung
-		\label{fig:Serienschaltung}}{
+		6 \dots entsprechende Verkabelung für
+		Serienschaltung\label{fig:Serienschaltung}}{
 		\includegraphics[width=.45\textwidth]{./figures/serienschaltung.jpg} } \hfill
 	\captionbox[Parallelschaltung der beiden Solarzellen]{Parallelschaltung der
 		beiden Solarzellen \\
@@ -328,8 +328,8 @@ wird bei den verwendeten Kabeln auf die Farbe geachtet.
 		3 \dots regelbarer Widerstand\\
 		4 \dots Voltmeter\\
 		5 \dots Amperemeter\\
-		6 \dots entsprechende Verkabelung für Parallelschaltung
-		\label{fig:Parallelschaltung}}{
+		6 \dots entsprechende Verkabelung für
+		Parallelschaltung\label{fig:Parallelschaltung}}{
 		\includegraphics[width=0.45\textwidth]{./figures/parallelschaltung.jpg} }
 \end{figure}
 
